# dodo_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_feed/lib/camera_feed/: camera_stream
install/camera_feed/share/camera_feed/: package.sh  package.xml
install/my_robot_bringup/share/ament_index/resource_index/parent_prefix_path/: my_robot_bringup
install/my_robot_bringup/share/my_robot_bringup/: package.sh
install/my_robot_controller/lib/my_robot_controller/: diff_drive_robot
install/my_robot_controller/share/my_robot_controller/: package.sh
install/my_robot_description/share/my_robot_description/: local_setup.sh  package.sh
install/my_robot_description/share/my_robot_description/launch/: display.launch.py
install/my_robot_description/share/my_robot_description/urdf/: dodobot.urdf
install/rplidar_ros/lib/rplidar_ros/: rplidar_composition
install/rplidar_ros/share/rplidar_ros/: local_setup.sh  package.sh
log/: latest_build
src/camera_feed/: setup.py
src/camera_feed/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/camera_feed/log/: latest_build
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: my_robot.launch.py
src/my_robot_controller/: package.xml  setup.py
src/my_robot_controller/my_robot_controller/submodules/: __init__.py  encoder_wrap.py  pid.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: my_robot.urdf.xacro
(+2 files in other folders)
